tias.tsinghua.edu.cn/sites/css/index.css
/* ... */
/* line 23 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--email:before{content:"\EA09"}
/* line 24 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--expand:before{content:"\EA0A"}
/* line 25 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--keyboard-arrow-down:before{content:"\EA0B"}
/* line 26 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--keyboard-arrow-left:before{content:"\EA0C"}
/* line 27 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--keyboard-arrow-right:before{content:"\EA0D"}
/* line 28 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--keyboard-arrow-up:before{content:"\EA0E"}
/* line 29 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--language:before{content:"\EA0F"}
/* line 30 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--menu:before{content:"\EA10"}
/* line 31 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--person:before{content:"\EA11"}
/* line 32 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--play:before{content:"\EA12"}
/* line 33 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--search:before{content:"\EA13"}
/* line 34 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--telephone:before{content:"\EA14"}
/* line 35 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--time:before{content:"\EA15"}
/* line 36 : /app/src/components/elements/styles/__generated/util-icons.styl */
.icon--to-top:before{content:"\EA16"}
/* line 36 : /app/src/components/elements/styles/link.styl */

/* line 1 : /app/src/components/elements/styles/link.styl */
.link{color:inherit;text-decoration:none;}
/* line 4 : /app/src/components/elements/styles/link.styl */
.link:hover{text-decoration:underline}
/* line 7 : /app/src/components/elements/styles/pager.styl */

/* line 1 : /app/src/components/elements/styles/pager.styl */
.pager{text-align:right;font-size:14px;color:#646464;}
/* line 7 : /app/src/components/elements/styles/pager.styl */
.pager li{list-style:none;display:inline-block;margin:0 1px;}
/* line 12 : /app/src/components/elements/styles/pager.styl */
.pager li .link{display:block;padding:2px 6px;}
/* line 15 : /app/src/components/elements/styles/pager.styl */
.pager li .link i{font-size:2em;top:5px;color:#a08e74}
/* line 20 : /app/src/components/elements/styles/pager.styl */
.pager li .link:hover{text-decoration:none;background-color:#e5e5e5}
/* line 26 : /app/src/components/elements/styles/pager.styl */

/* line 27 : /app/src/components/elements/styles/pager.styl */
.pager li.active .link{color:#fff;background-color:#d1634f}
/* line 34 : /app/src/components/lists/styles/activity-list.styl */

/* line 1 : /app/src/components/lists/styles/activity-list.styl */
.activity-list{margin-right:136px;border-right:1px solid #efefef;}@media (min-width:768px){
/* line 7 : /app/src/components/lists/styles/activity-list.styl */
.activity-list .activity-list-item__content{*zoom:1;float:left;clear:none;text-align:inherit;width:65.66666666666666%;margin-left:0%;margin-right:3%;}
/* line 276 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:before,.activity-list .activity-list-item__content:after{content:'';display:table}
/* line 280 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:after{clear:both}
/* line 42 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:nth-child(3n){margin-right:0%;float:right}
/* line 45 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:nth-child(3n+1){clear:both}}@media (min-width:600px) and (max-width:768px){
/* line 13 : /app/src/components/lists/styles/activity-list.styl */
.activity-list .activity-list-item__content{*zoom:1;float:left;clear:none;text-align:inherit;width:58.8%;margin-left:0%;margin-right:3%;}
/* line 276 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:before,.activity-list .activity-list-item__content:after{content:'';display:table}
/* line 280 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:after{clear:both}
/* line 42 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:nth-child(5n){margin-right:0%;float:right}
/* line 45 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list .activity-list-item__content:nth-child(5n+1){clear:both}}@media (max-width:600px){
/* line 20 : /app/src/components/lists/styles/activity-list.styl */
.activity-list{margin-right:0}
/* line 24 : /app/src/components/lists/styles/activity-list.styl */
.activity-list .activity-list-item__start-time{display:none}}
/* line 29 : /app/src/components/lists/styles/activity-list.styl */
.activity-list span.text{vertical-align:middle}
/* line 34 : /app/src/components/lists/styles/activity-list.styl */
.activity-list-item{position:relative;margin-bottom:40px;}
/* line 38 : /app/src/components/lists/styles/activity-list.styl */
.activity-list-item .icon{font-size:22px;color:#a3a3a3;margin-right:10px;vertical-align:middle}
/* line 47 : /app/src/components/lists/styles/activity-list.styl */
.activity-list-item__wrapper{border-bottom:1px solid #efefef;margin-right:56px;*zoom:1;}
/* line 276 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list-item__wrapper:before,.activity-list-item__wrapper:after{content:'';display:table}
/* line 280 : /app/node_modules/jeet/stylus/jeet/_grid.styl */
.activity-list-item__wrapper:after{clear:both}
/* ... */

